--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avalynx-datatable",
   "title": "AvalynxDataTable",
-  "description": "AvalynxDatatable is a simple, lightweight, and customizable data table for the web. Based on Bootstrap >=5.3 without any framework dependencies.",
+  "description": "AvalynxDatatable is a simple, lightweight, and customizable datatable for the web. Based on Bootstrap >=5.3 without any framework dependencies.",
   "version": "0.0.1",
   "license": "MIT",
   "main": "dist/js/avalynx-datatable.js",
@@ -15,7 +15,11 @@
   "keywords": [
     "avalynx",
     "datatable",
+    "datatables",
+    "datatables-ajax",
+    "datatables-serverside",
     "bootstrap",
+    "bootstrap5",
     "component",
     "ajax",
     "table"
