Authors to authors

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Juergen Schwind an the Avalynx-Datatable Authors",
+            "name": "Juergen Schwind an the Avalynx-Datatable authors",
             "homepage": "https://github.com/avalynx/avalynx-datatable/graphs/contributors"
         }
     ],
