--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "ajax",
     "table"
   ],
-  "dependencies": {
-    "bootstrap": ">=5.3"
-  },
   "ignore": [
     "package.json"
   ],
@@ -41,5 +38,21 @@
   },
   "bugs": {
     "url": "https://github.com/avalynx/avalynx-datatable/issues"
+  },
+  "scripts": {
+    "test": "jest",
+    "build": "shx rm -rf dist; shx mkdir -p dist/js/; shx cp src/js/avalynx-datatable.js dist/js/avalynx-datatable.js; shx cp src/js/avalynx-datatable.js dist/js/avalynx-datatable.esm.js; node build.js dist/js/avalynx-datatable.esm.js; shx mkdir -p dist/css/; shx cp src/css/avalynx-datatable.css dist/css/avalynx-datatable.css"
+  },
+  "dependencies": {
+    "bootstrap": ">=5.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7",
+    "@babel/preset-env": "^7",
+    "babel-jest": "^29",
+    "jest": "^29",
+    "jest-environment-jsdom": "^29",
+    "shelljs": "^0",
+    "shx": "^0"
   }
 }
