--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avalynx-datatable",
   "title": "AvalynxDataTable",
-  "description": "AvalynxDatatable is a simple, lightweight, and customizable datatable for the web. Based on Bootstrap >=5.3 without any framework dependencies.",
+  "description": "AvalynxDataTable is a simple, lightweight, and customizable datatable for the web. Based on Bootstrap >=5.3 without any framework dependencies.",
   "version": "0.0.2",
   "license": "MIT",
   "main": "dist/js/avalynx-datatable.js",
@@ -28,7 +28,7 @@
     "package.json"
   ],
   "author": {
-    "name": "Juergen Schwind an the Avalynx-Datatable Team",
+    "name": "Juergen Schwind an the Avalynx-DataTable Team",
     "url": "https://github.com/avalynx/avalynx-datatable/graphs/contributors"
   },
   "homepage": "https://github.com/avalynx/",
