Add badges to README, extend examples and language options, increase test coverage to 100%, configure CI with GitHub Actions, and bump version to 1.0.2

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.idea/
-/node_modules/
+/ai.txt
+/coverage/
 /examples/php/demo.db
 /examples/php/demo2.db
-/package-lock.json
-/ai.txt
+/node_modules/
