Update author naming conventions across all projects
Standardized the author names in JSON and LICENSE files, replacing hyphenated module names with camel case for consistency (e.g., "Avalynx-Table" to "AvalynxTable"). This improves uniformity across all Avalynx modules.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Juergen Schwind an the Avalynx-DataTable authors",
+            "name": "Juergen Schwind an the AvalynxDataTable Authors",
             "homepage": "https://github.com/avalynx/avalynx-datatable/graphs/contributors"
         }
     ],
