--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "package.json"
   ],
   "author": {
-    "name": "Juergen Schwind an the Avalynx-DataTable Team",
+    "name": "Juergen Schwind an the AvalynxDataTable Authors",
     "url": "https://github.com/avalynx/avalynx-datatable/graphs/contributors"
   },
   "homepage": "https://github.com/avalynx/",
